# eplayer

./: .gitignore  CMakeLists.txt
3rd/include/elog/: elog.h  threadpool.h
3rd/include/ffmpeg/libavutil/: ffversion.h
3rd/lib/elog/: elog.lib
3rd/lib/ffmpeg/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swscale.lib
src/: eplayer.cpp  eplayer.h  main.cpp
src/vulkan/: CMakeLists.txt  vulkanview.cpp  vulkanview.h
src/vulkan/shaders/: shader.vert  v.bat
